--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,17 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "django-admin-extra-buttons>=1.5.8",
-    "django==5.1.*",
+    "django==4.2.*",
 ]
+
+[project.optional-dependencies]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.5.36",
+    "mkdocs-awesome-pages-plugin>=2.9.3",
+    "mkdocstrings-python",
+]
+
 
 [tool.uv]
 dev-dependencies = [
