--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps =
     uv
 
 commands =
-    uv add {env:DJANGO}
+    pip install {env:DJANGO}
     uv run --with {env:DJANGO} pytest tests -v -rw
 
 
