--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dev-dependencies = [
     "flake8>=7.1.1",
     "black>=24.8.0",
     "openpyxl>=3.1.5",
-    "django>=4",
+    "django>=5,<6",
 ]
 
 
