--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist = d{42,51}-py{311,312}
 skip_missing_interpreters = true
+;skipsdist = true
 
 [testenv]
 ;install_command=pip install {opts} {packages}
@@ -9,12 +10,13 @@ passenv =
     PGHOST
     PGPORT
 
-whitelist_externals = mkdir
+allowlist_externals =
+    sh
 
 changedir={toxinidir}
 setenv =
-    d42: DJANGO = "django==4.2.*"
-    d51: DJANGO = "django==5.1.*"
+    d42: DJANGO = django>=4,<5
+    d51: DJANGO = django>=5,<6
     d42: LOCK = "uv4.lock"
     d51: LOCK = "uv5.lock"
 
@@ -22,8 +24,10 @@ deps =
     uv
 
 commands =
-    pip install {env:DJANGO}
-    uv run --with {env:DJANGO} pytest tests -v -rw
+    sh -c "echo '{env:DJANGO}' > {work_dir}/overrides.txt"
+    uv export -q --no-hashes --frozen -o {work_dir}/requirements.txt
+    uv pip install -r {work_dir}/requirements.txt --override {work_dir}/overrides.txt
+    pytest tests
 
 
 [testenv:lint]
