--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps =
 
 commands =
     sh -c "echo '{env:DJANGO}' > {work_dir}/overrides.txt"
-    uv export -q --no-hashes --frozen -o {work_dir}/requirements.txt
+    uv export -q --no-hashes  -o {work_dir}/requirements.txt
     uv pip install -r {work_dir}/requirements.txt --override {work_dir}/overrides.txt
     pytest tests
 
