--- a/tox.ini
+++ b/tox.ini
@@ -38,17 +38,20 @@ commands =
     flake8 src tests
     isort -c src tests
 
-
 [testenv:package]
+skip_install = true
+
 deps=
     build
     twine
+    pip
+
 
 setenv =
     TWINE_USERNAME = {env:TWINE_TEST_USERNAME:__token__}
     TWINE_PASSWORD = {env:TWINE_TEST_PASSWORD}
 
 commands =
-    python -c "import shutil; shutil.rmtree('dist', ignore_errors=True)"
-    python -m build
-    python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+    python -c "import shutil; shutil.rmtree('{toxinidir}/dist', ignore_errors=True)"
+    python -m build --outdir {toxinidir}/dist
+    pip install hope-smart-export --use-pep517 --no-deps --no-cache-dir --find-links file://{toxinidir}/dist/
