--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
       - '**'        # matches every branch
 
 concurrency:
-  group: "${{ github.workflow }}-${{ github.ref }}-test"
+  group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
 defaults:
@@ -21,6 +21,9 @@ permissions:
 jobs:
   changes:
     runs-on: ubuntu-latest
+    concurrency:
+      group: changes-group
+      cancel-in-progress: true
     timeout-minutes: 1
     defaults:
       run:
@@ -42,19 +45,6 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     name: Test py${{ matrix.python-version }}/dj${{matrix.django-version}}
-#    services:
-#      redis:
-#        image: redis
-#        ports:
-#          - 16379:6379
-#      postgres:
-#        image: postgres
-#        ports:
-#          - 15432:5432
-#        env:
-#          POSTGRES_USER: postgres
-#          POSTGRES_PASSWORD: postgres
-#          POSTGRES_DB: django_celery_boost
     defaults:
       run:
         shell: bash
@@ -69,39 +59,39 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.7
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           architecture: 'x64'
+
       - name: Restore cached venv
         id: cache-venv-restore
         uses: actions/cache/restore@v4
         with:
           path: |
-            .cache-uv/
             .venv/
           key: ${{ matrix.python-version }}-${{matrix.django-version}}-${{ hashFiles('pyproject.toml') }}-venv
 
       - uses: yezz123/setup-uv@v4
-        with:
-          python:  ${{ matrix.python-version }}
+
 
       - name: Test
-#        if: needs.changes.outputs.run_tests
+        continue-on-error: false
         run: |
-          uv add "django==${{ matrix.django-version }}.*"
-          uv run --cache-dir .cache-uv/ \
-              python -m pytest tests/ \
-                --junit-xml junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml \
-                --cov --cov-report xml
+          python3 -m venv .venv
+          uv export -q --no-hashes  -o requirements.txt
+          .venv/bin/pip install -r requirements.txt
+          .venv/bin/pip install "django>=${{matrix.django-version}}"
+          .venv/bin/pytest tests --create-db --cov --junit-xml junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
+
       - name: Cache venv
         if: steps.cache-venv-restore.outputs.cache-hit != 'true'
         id: cache-venv-save
         uses: actions/cache/save@v4
         with:
           path: |
-            .cache-uv/
             .venv/
           key: ${{ matrix.python-version }}-${{matrix.django-version}}-${{ hashFiles('pyproject.toml') }}-venv
 
@@ -110,7 +100,7 @@ jobs:
         with:
           name: pytest-results-${{ matrix.python-version }}-${{matrix.django-version}}
           path: junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
-        if: ${{ always() }}
+        if: matrix.python-version == 3.12
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
@@ -119,8 +109,7 @@ jobs:
         with:
           env_vars: OS,PYTHON
           fail_ci_if_error: true
-          flags: unittests
-          files: ./coverage.xml
-          verbose: false
+          files: coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: false
           name: codecov-${{env.GITHUB_REF_NAME}}
