--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ docs = [
 [tool.uv]
 dev-dependencies = [
     "black>=24.8.0",
+    "bump2version>=1.0.1",
     "django-webtest>=1.9.12",
     "django>=4,<6",
     "factory-boy>=3.3.1",
